Added styles for the welcome message

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,10 @@
   </section>
 
   <section class="container results" id="results">
-    <p class="text-center"><span class="glyphicon glyphicon-search"></span></p>
+    <p class="text-center info">
+      <span class="glyphicon glyphicon-search"></span>
+      Search Wikipedia
+    </p>
   </section>
 
 
