Added html classes to make content narrower

--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,12 @@
 
   <nav class="navbar navbar-default navbar-static-top">
     <div class="container">
-      <div class="navbar-header">
-        <span class="navbar-brand">Wikipedia Viewer</span>
+      <div class="row">
+        <div class="col-md-offset-2 col-md-8 col-sm-12">
+          <div class="navbar-header">
+            <span class="navbar-brand">Wikipedia Viewer</span>
+          </div>
+        </div>
       </div>
     </div>
   </nav>
@@ -32,12 +36,16 @@
     </form>
   </section>
 
-  <section class="container results" id="results">
-    <p class="text-center info">
-      <span class="glyphicon glyphicon-search"></span>
-      Search Wikipedia
-    </p>
-  </section>
+  <div class="container">
+    <div class="row">
+      <section class="results col-md-offset-2 col-md-8 col-sm-12" id="results">
+        <p class="text-center info">
+          <span class="glyphicon glyphicon-search"></span>
+          Search Wikipedia
+        </p>
+      </section>
+    </div>
+  </div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
