Changed search input and button to be on a single line

--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,12 @@
 
   <section class="container search">
     <form class="form-inline text-center">
-      <div class="form-group">
-        <label for="query" class="sr-only">Search Wikipedia</label>
+      <div class="input-group">
         <input type="text" class="form-control" id="query" placeholder="Search">
+        <span class="input-group-btn">
+          <button type="submit" class="btn btn-primary" id="search-btn"><span class="glyphicon glyphicon-search"></span></button>
+        </span>
       </div>
-      <button type="submit" class="btn btn-primary" id="search-btn"><span class="glyphicon glyphicon-search"></span></button>
     </form>
   </section>
 
