--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/bootstrap.js"></script>
+<!-- <script src="js/bootstrap.js"></script> -->
 <script src="js/main.js"></script>
 </body>
 </html>
