Added a random article button

--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,8 @@
         <p class="text-center info">
           <span class="glyphicon glyphicon-search"></span>
           Search Wikipedia
+          <br />or<br />
+          <a class="btn btn-default" href="https://en.wikipedia.org/wiki/Special:Random" role="button" target="_blank">Show a Random Article</a>
         </p>
       </section>
     </div>
